[gd_scene load_steps=6 format=3 uid="uid://cxjvq7if54yj8"]

[ext_resource type="Script" path="res://scripts/LevelSelector.gd" id="1_e0adh"]
[ext_resource type="Texture2D" uid="uid://sgj6m3noyjmi" path="res://assets/ui_component/LevelButton.png" id="2_f4mld"]
[ext_resource type="Texture2D" uid="uid://cyp2tqsmm8mxd" path="res://assets/ui_component/LevelLock.png" id="3_gg2p4"]
[ext_resource type="FontFile" uid="uid://dv1b0itpdjj42" path="res://assets/fonts/PeaberryBase.ttf" id="4_plv23"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ht4vn"]
size = Vector2(66, 66)

[node name="Level" type="Area2D"]
script = ExtResource("1_e0adh")

[node name="LevelButton" type="Sprite2D" parent="."]
texture = ExtResource("2_f4mld")

[node name="LevelLock" type="Sprite2D" parent="."]
visible = false
position = Vector2(0, -1)
scale = Vector2(0.2, 0.2)
texture = ExtResource("3_gg2p4")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource("RectangleShape2D_ht4vn")

[node name="LevelNumber" type="Label" parent="."]
offset_left = -9.0
offset_top = -13.0
offset_right = 14.0
offset_bottom = 19.0
theme_override_colors/font_color = Color(0.992157, 0.992157, 0.992157, 1)
theme_override_fonts/font = ExtResource("4_plv23")
theme_override_font_sizes/font_size = 32
text = "3"

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
